Wed Aug 12 15:25:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* openapp.in: export LIBRARY_COMBO.

Tue Aug  4 16:43:55 1998  Adam Fedor  <fedor@doc.com>

	* application.make: Correct resource installation when
	RESOURCE_FILES not defined.
	* bunlde.make: Likewise.

Tue Aug  4 12:50:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* brain.make: use -ldps even with xraw library.

Tues Aug 4 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* test-application.make set $(TEST_APP_NAME) to be a double colon target. 

Sat Jul 31 21:20:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	*common.make: Modified to set LDFLAGS to use '-pg' when compiling
	with 'profile=yes' and LD == CC

Fri Jul 31 15:08:25 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	*brain.make: Fixed to use the command-line specification of
	'library_combo' (if given) rather than the default library combo.

Mon Jul 20 10:38:25 1998  Adam Fedor  <fedor@ultra.doc.com>

	* application.make (app-resource-files): Use For loop to copy files.
	* bundle.make (app-resource-files): Likewise.

Fri Jul 10 21:46:19 1998  Adam Fedor  <fedor@ultra.doc.com>

	* target.make (HP_UX SHARED_LINK): Fix up including *.o files.

Wed Jun 17 10:00:20 1998  Adam Fedor  <fedor@ultra.doc.com>

	* brain.make: Add xraw library combo option
	
	* library.make: Add --no-keep-going MAKE option.
	* tool.make: Likewise.

Fri Jun 12 22:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* which_lib.c Fixed generation of library suffix and logic for shared
	libraries to get debug-profiled libraries chosen correctly.

Fri May 29 13:31:36 1998  Adam Fedor  <fedor@ultra.doc.com>

	* common.make (ADDITIONAL_FLAGS): Add -DDEBUG for debug=yes.
	* target.make (HP-UX SHARED_LINK): Add */*.o files.

Tue Apr 14 22:45:38 1998  Ovidiu Predescu  <ovidiu@aracnet.com>

	* test-tool.make (internal-testtool-check): New target.

Wed Apr  1 19:37:26 1998  Ovidiu Predescu  <ovidiu@aracnet.com>
