@@ -59,16 +59,21 @@
 
 #include <fcntl.h>
 
-#if defined(HAVE_DIRENT_H)
+#if HAVE_DIRENT_H
 # include <dirent.h>
-#elif defined(HAVE_SYS_DIR_H)
-# include <sys/dir.h>
-#elif defined(HAVE_SYS_NDIR_H)
-# include <sys/ndir.h>
-#elif defined(HAVE_NDIR_H)
-# include <ndir.h>
-#elif defined(HAVE_DIR_H)
-# include <dir.h>
+# define NAMLEN(dirent) strlen((dirent)->d_name)
+#else
+# define dirent direct
+# define NAMLEN(dirent) (dirent)->d_namlen
+# if HAVE_SYS_NDIR_H
+#  include <sys/ndir.h>
+# endif
+# if HAVE_SYS_DIR_H
+#  include <sys/dir.h>
+# endif
+# if HAVE_NDIR_H
+#  include <ndir.h>
+# endif
 #endif
 
 #if !defined(_POSIX_VERSION)
